testsuite/tests/indexed-types/should_fail/T13102/orphan/orphan.cabal
name: orphan
version: 1.0
exposed-modules: F, O
build-depends: base
build-type: Simple
